--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <br>
 
       <div class="bg-light">
-        Haven't an account yet ? <span class=><a href="sign up.html">Join us</a></span>
+        Haven't an account yet ? <span class=><a href="#">Sign up</a></span>
       </div>
       <br>
 
