--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <form>
         <div class="form-group">
           <label for="exampleInputEmail1"><span class="bg-light">Email address</span></label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required >
           <small id="emailHelp" class="form-text text-muted"><span class="bg-light">Your emial will not be shown by others.</span></small>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1"><span class="bg-light">Password</span></label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <input type="password" class="form-control" id="exampleInputPassword1" required >
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1"><span class="bg-light">Comment</span></label>
